# Leafleter

./: .gitignore  Makefile  README.md  architecture.md  docker-compose.prod.yml  docker-compose.yml  setup.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3b7f51e4d511_description.py  779ed4f4ced7_intelligence_ingestion.py  9415e2ae0254_competitor_feature_comparison.py  a27710824b7a_integrations_and_newsletters.py  ca8f3b2181f9_facts.py  f4bf8d9e2512_vector_chunks.py  f946a0ae2b8b_create_cost_ledgers_table.py
backend/app/: __init__.py  main.py
backend/app/analysis/: __init__.py  audience.py  base.py  opportunities.py  pain_points.py  reputation.py  sentiment.py  swot.py  trends.py
backend/app/core/: config.py  deps.py  exceptions.py  intelligence.py  logging.py  security.py
backend/app/crud/: __init__.py  alert.py  alert_rule.py  api_key.py  base.py  chat.py  competitor.py  cost_ledger.py  job.py  notification.py  organization.py  provider.py  report_comment.py  role.py  schedule.py  topic.py  user.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/models/: __init__.py  alert.py  api_key.py  audit_log.py  chat.py  competitor.py  cost_ledger.py  facts.py  integration.py  intelligence.py  job.py  newsletter.py  notification.py  organization.py  plugin.py  provider.py  rag.py  report.py  report_comment.py  role.py  schedule.py  social_account.py  topic.py  user.py
backend/app/notifications/: __init__.py  base.py  discord.py  email.py  messenger.py  slack.py  teams.py  whatsapp.py
backend/app/providers/: __init__.py  _crypto.py  _stub_base.py  azure_openai_provider.py  base.py  bedrock_provider.py  claude_provider.py  config_schemas.py  gemini_provider.py  kimi_provider.py  openai_provider.py  openrouter_provider.py  qwen_provider.py  registry.py
backend/app/reporting/: __init__.py  base.py
backend/app/scheduler/: jobs.py  scheduler.py
backend/app/schemas/: __init__.py  alert.py  api_key.py  chat.py  competitor.py  dashboard.py  facts.py  integration.py  intelligence.py  job.py  newsletter.py  rag.py  (+12 more)
backend/intelligence_core/: __init__.py  action_engine.py  context_memory.py  database.py  entity_graph.py  event_bus.py  workflows.py
backend/scripts/: migrate_to_intelligence_core.py
(+91 files in other folders)
