[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leafleter-backend"
version = "0.1.0"
description = "Leafleter - AI-powered market intelligence SaaS backend"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Leafleter Team" },
]
keywords = ["fastapi", "saas", "ai", "market-intelligence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.17",
    "httpx>=0.27.0",
    "apscheduler>=3.11.0",
    "jinja2>=3.1.4",
    "markdown>=3.7",
    "python-docx>=1.1.2",
    "python-pptx>=1.0.2",
    "weasyprint>=63.0",
    "structlog>=24.4.0",
    "aiosmtplib>=3.0.0",
    "prometheus-client>=0.21.0",
    "tenacity>=9.0.0",
    "email-validator>=2.2.0",
    "itsdangerous>=2.2.0",
    "bcrypt>=4.2.0",
    "openai>=1.54.0",
    "anthropic>=0.39.0",
    "google-generativeai>=0.8.0",
    "boto3>=1.35.0",
    "requests>=2.32.0",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "python-slugify>=8.0.4",
    "ddgs",
    "duckduckgo-search",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "faker>=30.0.0",
    "mypy>=1.13.0",
    "ruff>=0.7.0",
    "pre-commit>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
